[Debug] inspector/console/console-oom.html is flaky crash https://bugs.webkit.org/show_bug.cgi?id=273363

Reviewed by Antti Koivisto.

Releasing caches due to OOM makes previously computed damage position invalid. Let's make it point to the beginning of the content.

* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::InlineInvalidation::resetInlineDamage):
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.h:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::releaseCaches):
(WebCore::LayoutIntegration::LineLayout::releaseCachesAndResetDamage):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:

Canonical link: https://commits.webkit.org/278087@main